--- a/netconf-server-modelnode-fwk/pom.xml
+++ b/netconf-server-modelnode-fwk/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.bbf.obbaa.netconf</groupId>
         <artifactId>parent-pom</artifactId>
-        <version>1.0.0</version>
+        <version>1.1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.bbf.obbaa.netconf</groupId>
@@ -82,7 +82,11 @@
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk16</artifactId>
+            <artifactId>bcprov-jdk15on</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bctls-jdk15on</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.sshd</groupId>
