--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.bbf.obbaa.netconf</groupId>
   <artifactId>parent-pom</artifactId>
-  <version>1.0.0</version>
+  <version>1.1.0</version>
   <packaging>pom</packaging>
   <name>netconf-lib/parent-pom</name>
   <modules>
@@ -56,7 +56,7 @@
     <org.springframework.boot.version>1.2.5.RELEASE</org.springframework.boot.version>
     <commons-io.version>2.4</commons-io.version>
     <joda.time.version>2.8</joda.time.version>
-    <bouncy.castle.version>1.46</bouncy.castle.version>
+    <bouncy.castle.version>1.59</bouncy.castle.version>
     <mina.version>1.3.0</mina.version>
     <woodstox.core.asl.version>4.4.1</woodstox.core.asl.version>
     <osgi.core.version>6.0.0</osgi.core.version>
@@ -285,7 +285,12 @@
       </dependency>
       <dependency>
         <groupId>org.bouncycastle</groupId>
-        <artifactId>bcprov-jdk16</artifactId>
+        <artifactId>bcprov-jdk15on</artifactId>
+        <version>${bouncy.castle.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.bouncycastle</groupId>
+        <artifactId>bctls-jdk15on</artifactId>
         <version>${bouncy.castle.version}</version>
       </dependency>
       <dependency>
