--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -17,9 +17,9 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-        <groupId>org.bbf.obbaa.netconf</groupId>
+        <groupId>org.broadband-forum.obbaa.netconf</groupId>
         <artifactId>parent-pom</artifactId>
-        <version>2.1.1</version>
+        <version>3.0.0</version>
     </parent>
     <!-- All API/SPI Bundles must be listed here. BOM to help Application/SP Development. -->
     <modelVersion>4.0.0</modelVersion>
@@ -34,73 +34,73 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.bbf.obbaa.netconf</groupId>
+                <groupId>org.broadband-forum.obbaa.netconf</groupId>
                 <artifactId>auth-spi</artifactId>
                 <version>${netconf-lib.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.bbf.obbaa.netconf</groupId>
+                <groupId>org.broadband-forum.obbaa.netconf</groupId>
                 <artifactId>stack-api</artifactId>
                 <version>${netconf-lib.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.bbf.obbaa.netconf</groupId>
+                <groupId>org.broadband-forum.obbaa.netconf</groupId>
                 <artifactId>netconf-api</artifactId>
                 <version>${netconf-lib.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.bbf.obbaa.netconf</groupId>
+                <groupId>org.broadband-forum.obbaa.netconf</groupId>
                 <artifactId>netconf-server</artifactId>
                 <version>${netconf-lib.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.bbf.obbaa.netconf</groupId>
+                <groupId>org.broadband-forum.obbaa.netconf</groupId>
                 <artifactId>netconf-server</artifactId>
                 <version>${netconf-lib.version}</version>
                 <type>test-jar</type>
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>org.bbf.obbaa.netconf</groupId>
+                <groupId>org.broadband-forum.obbaa.netconf</groupId>
                 <artifactId>netconf-client</artifactId>
                 <version>${netconf-lib.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.bbf.obbaa.netconf</groupId>
+                <groupId>org.broadband-forum.obbaa.netconf</groupId>
                 <artifactId>netconf-client</artifactId>
                 <version>${netconf-lib.version}</version>
                 <type>test-jar</type>
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>org.bbf.obbaa.netconf</groupId>
+                <groupId>org.broadband-forum.obbaa.netconf</groupId>
                 <artifactId>netconf-driver</artifactId>
                 <version>${netconf-lib.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.bbf.obbaa.netconf</groupId>
+                <groupId>org.broadband-forum.obbaa.netconf</groupId>
                 <artifactId>stack-logging-api</artifactId>
                 <version>${netconf-lib.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.bbf.obbaa.netconf</groupId>
+                <groupId>org.broadband-forum.obbaa.netconf</groupId>
                 <artifactId>netconf-server-modelnode-fwk</artifactId>
                 <version>${netconf-lib.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.bbf.obbaa.netconf</groupId>
+                <groupId>org.broadband-forum.obbaa.netconf</groupId>
                 <artifactId>netconf-server-modelnode-fwk</artifactId>
                 <version>${netconf-lib.version}</version>
                 <type>test-jar</type>
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>org.bbf.obbaa.netconf</groupId>
+                <groupId>org.broadband-forum.obbaa.netconf</groupId>
                 <artifactId>netconf-persistence-app</artifactId>
                 <version>${netconf-lib.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.bbf.obbaa.netconf</groupId>
+                <groupId>org.broadband-forum.obbaa.netconf</groupId>
                 <artifactId>netconf-persistence-app</artifactId>
                 <version>${netconf-lib.version}</version>
                 <type>test-jar</type>
