--- a/netconf-api/pom.xml
+++ b/netconf-api/pom.xml
@@ -18,19 +18,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-        <groupId>org.bbf.obbaa.netconf</groupId>
+        <groupId>org.broadband-forum.obbaa.netconf</groupId>
         <artifactId>parent-pom</artifactId>
-        <version>2.1.1</version>
+        <version>3.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.bbf.obbaa.netconf</groupId>
+    <groupId>org.broadband-forum.obbaa.netconf</groupId>
     <artifactId>netconf-api</artifactId>
     <name>netconf-lib/netconf-api</name>
     <packaging>bundle</packaging>
     <dependencies>
         <!-- Internal -->
         <dependency>
-            <groupId>org.bbf.obbaa.netconf</groupId>
+            <groupId>org.broadband-forum.obbaa.netconf</groupId>
             <artifactId>stack-logging-api</artifactId>
             <version>${project.version}</version>
         </dependency>
