--- a/samples/netconf-lib-demo/pom.xml
+++ b/samples/netconf-lib-demo/pom.xml
@@ -17,9 +17,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-        <groupId>org.bbf.obbaa.netconf</groupId>
+        <groupId>org.broadband-forum.obbaa.netconf</groupId>
         <artifactId>samples</artifactId>
-        <version>2.1.1</version>
+        <version>3.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>netconf-lib-demo</artifactId>
@@ -44,12 +44,12 @@
         </dependency>
         <!-- netconf lib deps -->
         <dependency>
-            <groupId>org.bbf.obbaa.netconf</groupId>
+            <groupId>org.broadband-forum.obbaa.netconf</groupId>
             <artifactId>netconf-client</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.bbf.obbaa.netconf</groupId>
+            <groupId>org.broadband-forum.obbaa.netconf</groupId>
             <artifactId>netconf-server</artifactId>
             <version>${project.version}</version>
         </dependency>
