--- a/samples/server-fwk-demo/pom.xml
+++ b/samples/server-fwk-demo/pom.xml
@@ -18,12 +18,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-        <groupId>org.bbf.obbaa.netconf</groupId>
+        <groupId>org.broadband-forum.obbaa.netconf</groupId>
         <artifactId>samples</artifactId>
-        <version>2.1.1</version>
+        <version>3.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.bbf.obbaa.netconf.samples</groupId>
+    <groupId>org.broadband-forum.obbaa.netconf.samples</groupId>
     <artifactId>server-fwk-demo</artifactId>
     <packaging>pom</packaging>
     <name>samples/server-fwk-demo</name>
