--- a/netconf-api/pom.xml
+++ b/netconf-api/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.broadband-forum.obbaa.netconf</groupId>
         <artifactId>parent-pom</artifactId>
-        <version>5.1.0</version>
+        <version>6.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.broadband-forum.obbaa.netconf</groupId>
@@ -40,10 +40,12 @@
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
+            <version>${bouncy.castle.version.for.netconf-api}</version>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bctls-jdk15on</artifactId>
+            <version>${bouncy.castle.version.for.netconf-api}</version>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
